syntax = "proto3";

option csharp_namespace = "JobsWorkerWebService.GrpcServices";

import "google/protobuf/timestamp.proto";

package JobsWorkerWebService.GrpcServices;

message FileSystemObject{
	string Name = 1;
	string FullName  = 2;
	string Type = 3;
	int64 Length  = 4;
	google.protobuf.Timestamp CreationTime  = 5;
	google.protobuf.Timestamp LastWriteTime  = 6;
}

// The request message containing the user's name.
message FileSystemListReq{
	string RequestId = 1;
	string MachineName = 2;
	string Path = 3;
	string SearchPattern = 4;
	bool IncludeSubDirectories = 5;
	int32 Timeout = 6;
}

// The response message containing the greetings.
message FileSystemListRsp {
	string RequestId = 1;
	int32 ErrorCode = 2;
	string ErrorMessage = 3;
	repeated FileSystemObject items = 4;
}
